crates/analyzer/tests/snapshots/errors__call_send_value_without_parameter.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `send_value` expects 2 arguments, but 0 were provided
   ┌─ src/lib.fe:11:8
   │
11 │ pub fn send_value(to: address, wei: u256):
   │        ^^^^^^^^^^ expects 2 arguments
   │
   ┌─ [snippet]:3:18
   │
 3 │   std::send_value()
   │                  -- supplied 0 arguments


